# webnuke

./: AGENTS.md  LICENSE  README.md  console.py  install-requirements.sh  pyproject.toml  quickdetect_cli.py  requirements.txt
.github/workflows/: ci.yml
libs/angular/: angularCommands.py  angularCustomJavascript.py  angularmenu.py
libs/aws/: awscommands.py  awsmenu.py  s3_helper.py
libs/brutelogin/: brutelogincommands.py  bruteloginmenu.py
libs/cms/: cmscommands.py  cmsmenu.py
libs/csrf/: csrfcommands.py  csrfmenu.py
libs/dns/: dnscommands.py  dnsmenu.py  tld.txt
libs/followme/: followmecommands.py  followmemenu.py
libs/htmltools/: htmlcommands.py  htmlmenu.py  htmltoolsscript.py
libs/javascript/: browser_builtins.txt  javascriptcommands.py  javascriptmenu.py  javascriptscript.py  jsshell.py  jswalker.py
libs/jsconsole/: JSConsole.py  jsconsolescript.py
libs/mainmenu/: mainframe.py  mainmenuscreen.py
libs/quickdetect/: AWSS3Util.py  AngularUtil.py  CORSUtil.py  CSPUtil.py  CloudIPUtil.py  DojoUtil.py  DrupalUtil.py  EmberUtil.py  FaviconUtil.py  GraphQLUtil.py  JQueryUtil.py  MXEmailUtil.py  ManifestUtil.py  NextJSUtil.py  O365Util.py  OnMessageUtil.py  QuickDetect.py  ReactUtil.py  SecurityHeadersUtil.py  ServiceWorkerUtil.py  SvelteUtil.py  (+6 more)
tests/: test_aws.py  test_cms.py  test_csp.py  test_csrf.py  test_dnscommands.py  test_followme.py  test_htmlcommands.py  test_jsshell.py  test_mainframe.py  test_mxemailutil.py  test_quickdetect.py  test_quickdetect_cli.py  test_s3helper.py  test_s3util.py  test_security_headers.py  test_utils.py  test_xss.py
(+16 files in other folders)
